# tihulu-media-source-controller

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: TECHNICAL_DESIGN.md  UI_SPEC.md
packaging/: com.github.tihulu.CosmicMediaSourceController.desktop
scripts/: install.sh  tihulu-media-key-daemon
src/: main.rs
