[package]
name = "tihulu-media-source-controller"
version = "0.3.0"
edition = "2021"
authors = ["Tihulu"]
license = "GPL-3.0-or-later"
description = "A COSMIC panel applet and desktop GUI that routes media keys to one selected media source."
repository = "https://github.com/Tihulu/tihulu-media-source-controller"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
notify-rust = "4.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "wayland",
    "winit",
]
